--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Algorithm::Bucketizer.
 
+0.13  (not yet released)
+    (ms) Added github repo
+
 0.12  04/21/2007
     (ms) Added 'bucketize' script
 
